--- a/app/src/main/res/layout/activity_kategori.xml
+++ b/app/src/main/res/layout/activity_kategori.xml
@@ -6,7 +6,7 @@
     android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.news.NewsFragment">
+    tools:context=".ui.kategori.CategoriseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,19 +23,19 @@
             android:layout_marginStart="20dp">
 
             <ImageView
-                android:id="@+id/backButtonNews"
+                android:id="@+id/backButtonKategori"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_back"
                 android:contentDescription="@string/back" />
 
             <TextView
-                android:id="@+id/NewsTitle"
+                android:id="@+id/KategoriTitle"
                 android:layout_width="288dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:gravity="center"
-                android:text="@string/name_news"
+                android:text="@string/name_kategori"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:fontFamily="@font/poppins_semi_bold" />
@@ -43,9 +43,10 @@
 
         <!-- RecyclerView untuk Menampilkan Daftar Berita -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewNews"
+            android:id="@+id/recyclerViewKategori"
             android:layout_width="match_parent"
             android:layout_marginTop="18dp"
+            tools:listitem="@layout/item_kuliner"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
