--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -18,12 +18,12 @@
             android:src="@drawable/ic_back"
             android:contentDescription="@string/back" />
 
-
         <TextView
             android:layout_width="316dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:gravity="center"
+            android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/title_notifications"
             android:textSize="18sp" />
     </LinearLayout>
