--- a/app/src/main/res/layout/activity_detail_resto.xml
+++ b/app/src/main/res/layout/activity_detail_resto.xml
@@ -158,14 +158,15 @@
                     tools:ignore="SmallSp" />
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvOperationalHours"
+            <TextView
+                android:id="@+id/tvOperationalHours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                tools:listitem="@layout/item_operational_hours"/>
+                tools:listitem="@layout/item_operational_hours"
+                android:text="@string/OperationalHours"/>
 
             <!-- Kategori Restoran -->
             <LinearLayout
