--- a/app/src/main/res/layout/item_restoran.xml
+++ b/app/src/main/res/layout/item_restoran.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="180dp"
-    android:layout_height="218dp"
+    android:layout_height="230dp"
     android:layout_marginBottom="25dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="15dp"
@@ -41,7 +41,7 @@
 
         <!-- Rating -->
         <LinearLayout
-            android:layout_width="51dp"
+            android:layout_width="55dp"
             android:layout_height="22dp"
             android:layout_margin="8dp"
             android:orientation="horizontal"
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="120dp"
+        android:layout_marginEnd="10dp"
         tools:ignore="RedundantNamespace">
 
         <!-- Nama Restoran -->
@@ -93,7 +94,7 @@
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/nama_restoran"
             android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
 
         <!-- Alamat Restoran -->
         <LinearLayout
@@ -129,8 +130,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <!-- Kategori Suhu -->
