--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -1,85 +1,64 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:padding="10dp"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- Rating Bar -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/userImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/profile"
+            android:scaleType="centerCrop"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_image" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User Name"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/feedbackTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2 days ago"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/feedbackDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Feedback description goes here."
+        android:layout_marginTop="8dp" />
+
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="246dp"
-        android:layout_height="44dp"
-        android:scaleX="0.5"
-        android:scaleY="0.5"
-        android:numStars="5"
-        android:rating="3.5"
-        android:stepSize="0.2"
-        android:secondaryProgressTint="@color/color_light_green2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:progressTint="@color/color_light_green"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="-8dp" />
-
-    <!-- Gambar Profil -->
-    <ImageView
-        android:id="@+id/imgUser"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="12dp"
-        android:background="@drawable/rounded_image_user"
-        android:clipToOutline="true"
-        android:contentDescription="@string/name_kuliner"
-        android:scaleType="centerCrop"
-        android:src="@drawable/food_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ratingBar"
-        tools:ignore="UnusedAttribute" />
-
-    <!-- Nama User -->
-    <TextView
-        android:id="@+id/Tv_nameUsers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppins_semi_bold"
-        android:text="@string/name_user"
-        app:layout_constraintStart_toEndOf="@id/imgUser"
-        app:layout_constraintTop_toTopOf="@id/imgUser" />
-
-    <!-- Waktu Feedback -->
-    <TextView
-        android:id="@+id/Tv_waktuFeedback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semi_bold"
-        android:text="@string/days_ago_feedback"
-        android:textColor="@color/feedback_color"
-        android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/Tv_nameUsers"
-        tools:ignore="TextContrastCheck" />
-
-    <!-- Deskripsi Feedback -->
-    <TextView
-        android:id="@+id/Tv_deskripsiFeedback"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="11sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppins_medium"
-        android:text="@string/desc_feedback"
-        app:layout_constraintTop_toBottomOf="@id/imgUser"
-        app:layout_constraintStart_toStartOf="@id/imgUser"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="VisualLintLongText" />
+        android:numStars="5"
+        android:stepSize="0.5"
+        android:isIndicator="true" />
 
     <View
         android:layout_width="match_parent"
@@ -87,8 +66,5 @@
         android:background="@drawable/dashed_line"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@id/Tv_deskripsiFeedback"
-        app:layout_constraintStart_toStartOf="@id/Tv_deskripsiFeedback"
         app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
