--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="yellow">#FFEB3B</color>
     <color name="feedback_color">#B4B9C9</color>
     <color name="line_color">#D9D9D9</color>
+    <color name="desc_color">#9F9696</color>
 
     <color name="star_color">#FFC107</color> <!-- Warna bintang terisi -->
     <color name="star_secondary">#FFD54F</color> <!-- Warna bintang setengah -->
