--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
-    tools:context=".MapsActivity">
+    tools:context=".ui.maps.MapsActivity">
 
-    <!-- ScrollView to make the content scrollable -->
     <android.widget.ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,6 +26,171 @@
                 map:layout_constraintStart_toStartOf="parent"
                 map:layout_constraintEnd_toEndOf="parent" />
 
+            <ImageView
+                android:id="@+id/backButtonMaps"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/circle_bg"
+                android:padding="8dp"
+                android:src="@drawable/ic_back"
+                android:contentDescription="@string/back"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <!-- Rating -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rating_background"
+                android:orientation="horizontal"
+                android:padding="6dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="15dp"
+                map:layout_constraintTop_toBottomOf="@id/map"
+                map:layout_constraintEnd_toEndOf="@id/map">
+
+                <!-- Teks Rating -->
+                <TextView
+                    android:id="@+id/tvratingsMaps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/poppins_semi_bold"
+                    android:text="@string/rating"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+
+                <!-- Ikon Rating -->
+                <ImageView
+                    android:id="@+id/Iv_rating"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="4dp"
+                    android:src="@drawable/ic_star"
+                    android:tint="@color/yellow"
+                    tools:ignore="UseAppTint" />
+            </LinearLayout>
+
+            <!-- Nama Restoran -->
+            <TextView
+                android:id="@+id/tvRestaurantMaps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="55dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:text="@string/nama_restoran"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                map:layout_constraintTop_toBottomOf="@id/map"/>
+
+            <!-- Alamat Restoran -->
+            <LinearLayout
+                android:id="@+id/maps_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                tools:ignore="UseCompoundDrawables"
+                map:layout_constraintTop_toBottomOf="@id/tvRestaurantMaps"
+                map:layout_constraintStart_toStartOf="@id/tvRestaurantMaps">
+
+                <!-- Ikon Lokasi -->
+                <ImageView
+                    android:id="@+id/iconLocation"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/ic_location" />
+
+                <!-- Alamat -->
+                <TextView
+                    android:id="@+id/tvMapsAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/alamat_restoran"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:ignore="SmallSp" />
+            </LinearLayout>
+
+            <!-- deskripsi Restoran -->
+            <TextView
+                android:id="@+id/tvMapsdesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="@string/desc_ob5"
+                android:textColor="@color/desc_color"
+                android:textSize="12sp"
+                tools:ignore="SmallSp"
+                map:layout_constraintTop_toBottomOf="@id/maps_address"/>
+
+            <!-- Kategori Restoran -->
+            <LinearLayout
+                android:id="@+id/kategoriEco"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:orientation="horizontal"
+                map:layout_constraintTop_toBottomOf="@id/tvMapsdesc"
+                map:layout_constraintStart_toStartOf="@id/tvRestaurantMaps">
+
+                <!-- Kategori Suhu -->
+                <TextView
+                    android:id="@+id/tvCategoriSuhuMaps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semi_bold"
+                    android:text="@string/categori_suhu"
+                    android:textColor="@color/color_green"
+                    android:textSize="14sp"
+                    tools:ignore="SmallSp,TextContrastCheck" />
+
+                <!-- Kategori Eco -->
+                <TextView
+                    android:id="@+id/tvCategoriEcoMaps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:fontFamily="@font/poppins_semi_bold"
+                    android:text="@string/categori_eco_friendly"
+                    android:textColor="@color/color_green"
+                    android:textSize="14sp"
+                    tools:ignore="SmallSp,TextContrastCheck" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/itemRestoran"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                android:layout_marginTop="12dp"
+                map:layout_constraintTop_toBottomOf="@id/kategoriEco"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </android.widget.ScrollView>
+
+    <Button
+        android:id="@+id/ButtonCek_lokasi"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="20dp"
+        app:cornerRadius="20dp"
+        android:text="@string/tambah_lokasi"
+        android:textSize="18sp"
+        android:fontFamily="@font/poppins_semi_bold"
+        android:backgroundTint="@color/color_green"
+        android:textColor="@android:color/white"
+        android:elevation="4dp"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
