--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,14 +1,13 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="360dp"
-    android:layout_height="210dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="15dp"
     app:cardElevation="3dp"
-    app:cardBackgroundColor="@color/white"
-    tools:ignore="TextSizeCheck">
+    app:cardBackgroundColor="@color/white">
 
     <!-- Gambar Profil -->
     <RelativeLayout
