--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -46,6 +46,6 @@
             android:id="@+id/recyclerViewNews"
             android:layout_width="match_parent"
             android:layout_marginTop="18dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="1900dp" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
